# online_store_api

./: .env.sample  .flake8  pyproject.toml
config/: settings.py  urls.py
online_store/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
online_store/migrations/: 0001_initial.py  0002_alter_linknetwork_title.py  0003_alter_linknetwork_product_name.py  0004_linknetwork_owner.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_super_users.py
users/migrations/: 0001_initial.py
